syntax = "proto3";

option csharp_namespace = "Critical.Chat.Protocol.Protobuf";

message ChatRoom {
  string id = 1;
  string name = 2;
}

message ChatUser {
  string userId = 1;
  string userName = 2;
}

message ListRoomsRequest {}

message ListRoomsResponse {
  repeated ChatRoom rooms = 1;
}

message HandshakeRequest {
  ChatUser user = 1;
}

message HandshakeResponse {
}

message CreateRoomRequest {
  string roomName = 1;
}

message CreateRoomResponse {
  ChatRoom room = 1;
}

message JoinRoomRequest {
  string roomId = 1;
}

message JoinRoomResponse {
  ChatRoom room = 1;
  repeated UserMessage messages = 2;
}

message LeaveRoomRequest {
  ChatRoom room = 1;
}

message LeaveRoomResponse {
  ChatRoom room = 1;
}

message SendMessage {
  string roomId = 1;
  string message = 2;
}

message UserMessage {
  ChatUser user = 1;
  ChatRoom room = 2;
  string message = 3;
}

message ProtocolMessage {
  uint64 id = 1;
  oneof message {
    HandshakeRequest handshakeRequest = 2;
    HandshakeResponse handshakeResponse = 3;
    CreateRoomRequest createRoomRequest = 4;
    CreateRoomResponse createRoomResponse = 5;
    ListRoomsRequest listRoomRequest = 6;
    ListRoomsResponse listRoomResponse = 7;
    JoinRoomRequest joinRoomRequest = 8;
    JoinRoomResponse joinRoomResponse = 9;
    LeaveRoomRequest leaveRoomRequest = 10;
    LeaveRoomResponse leaveRoomResponse = 11;
    SendMessage sendMessage = 12;
    UserMessage userMessage = 13;
  }
}
